# comprag

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
comprag/: __main__.py  search.py  sync.py  upload.py  web.py
comprag/database/: database_config.py  database_manager.py  registry.py
comprag/util/: singleton.py
wiki/: BACKLOG.md  arhitecture.md
